--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,9 +7,11 @@ const title = 'About - Cities Skylines Modding';
 
 <MainLayout title={title}>
 	<TableOfContents />
-	<section class="py-12 sm:ml-64 xl:mr-64 text-lg text-hit-gray-500">
+	<section class="pt-12 pb-48 sm:ml-64 xl:mr-64 text-lg text-hit-gray-500">
 		<div class="content">
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="about">About</h2>
+			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="about">
+				About
+			</h2>
 			<p class="mt-4">CSLM is a wiki-style resource for Cities: Skylines I & II asset creation.</p>
 
 			<p class="mt-4">
@@ -20,17 +22,29 @@ const title = 'About - Cities Skylines Modding';
 					theme="externallink"
 				/>
 			</p>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="credits">Credits</h2>
+			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="credits">
+				Credits
+			</h2>
 			<p class="mt-4">Original design, development, CS I content: Ronyx69</p>
 			<p class="mt-4">Website remake, development, CS II content: ComradeIntense</p>
 			<p class="mt-4">Development help: Cozonaq, Egi, boformer, Quboid, whitemsv</p>
 			<p class="mt-4">Home page icons: Hadece</p>
-			<p class="mt-4">Search: <Link classes="" href="https://pagefind.app/" text="PageFind" theme="externallink" /></p>
-			<p class="mt-4">Syntax Highlighting: <Link classes="" href="https://highlightjs.org/" text="highlight.js" theme="externallink" /></p>
+			<p class="mt-4">
+				Search: <Link classes="" href="https://pagefind.app/" text="PageFind" theme="externallink" />
+			</p>
+			<p class="mt-4">
+				Syntax Highlighting: <Link
+					classes=""
+					href="https://highlightjs.org/"
+					text="highlight.js"
+					theme="externallink"
+				/>
+			</p>
 			<p class="mt-4">Output Log Decrufter: aubergine18</p>
 			<p class="mt-4">
-				Feedback and corrections: Cozonaq, Lost Gecko, Geze, hemeac, mntoes, Simon Royer, Tim The Terrible, Badi_Dea, Bento Gambin, GiometryE, BoldlyBuilding,
-				sebnichols, Armesto, boformer, aubergine18, kian.zarrin
+				Feedback and corrections: Cozonaq, Lost Gecko, Geze, hemeac, mntoes, Simon Royer, Tim The Terrible,
+				Badi_Dea, Bento Gambin, GiometryE, BoldlyBuilding, sebnichols, Armesto, boformer, aubergine18,
+				kian.zarrin
 			</p>
 		</div>
 	</section>
