--- a/src/pages/cs2/search.astro
+++ b/src/pages/cs2/search.astro
@@ -5,11 +5,14 @@ const title = 'Search - Cities Skylines Modding';
 ---
 
 <MainLayoutCS2 title={title}>
-	<section class="py-12 sm:ml-64 xl:mr-64 text-lg text-hit-gray-500">
+	<section class="pt-12 pb-48 sm:ml-64 xl:mr-64 text-lg text-hit-gray-500">
 		<div class="content">
-			<h2 class="border-b-2 border-hit-gray-600 pb-8 text-4xl font-medium text-hit-gray-400" id="about">Search</h2>
+			<h2 class="border-b-2 border-hit-gray-600 pb-8 text-4xl font-medium text-hit-gray-400" id="about">
+				Search
+			</h2>
 			<p class="mt-4">
-				This is a custom search for searching the entire website. If you would like to search within a specific article, press <span class="key">Ctrl+F</span>
+				This is a custom search for searching the entire website. If you would like to search within a specific
+				article, press <span class="key">Ctrl+F</span>
 				 to use the search in your browser.
 			</p>
 			<p class="mt-4"><br /></p>
