--- a/src/pages/files/terms.astro
+++ b/src/pages/files/terms.astro
@@ -5,51 +5,65 @@ const title = 'Terms of use - Cities Skylines Modding';
 ---
 
 <MainLayout title={title}>
-	<section class="py-12 sm:ml-64 xl:mr-64 text-lg text-hit-gray-500">
+	<section class="pt-12 pb-48 sm:ml-64 xl:mr-64 text-lg text-hit-gray-500">
 		<div class="main">
 			<h1 class="border-b-4 border-hit-gray-600 pb-8 text-2xl md:text-4xl font-bold text-hit-gray-400">
 				Terms of use for <Link classes="" href="/files/" text="cslmodding.info/files" theme="internallink" />
 			</h1>
 
 			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400">About</h2>
-			<p class="mt-4">This isn't a legal document or some copy-paste license. This is just me (Ronyx69) explaining how I think this content should be used.</p>
+			<p class="mt-4">
+				This isn't a legal document or some copy-paste license. This is just me (Ronyx69) explaining how I think
+				this content should be used.
+			</p>
 
 			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400">Legality</h2>
 			<p class="mt-4">
-				Some of my work contains copyrighted content used without permission - e.g. the Honda logo on my Honda Stepwgn model. So I don't consider myself to be
-				entitled to dictate how you are allowed to use this content in your work. You have to decide for yourself.
+				Some of my work contains copyrighted content used without permission - e.g. the Honda logo on my Honda
+				Stepwgn model. So I don't consider myself to be entitled to dictate how you are allowed to use this
+				content in your work. You have to decide for yourself.
 			</p>
 
 			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400">Context</h2>
 			<p class="mt-4">
-				This content was created for Cities: Skylines, and I expect that it will be mostly used in the same context by others. But if you want to convert these
-				items for other games or create artwork using it, I don't mind at all, as long as it's done fairly according to these terms.
+				This content was created for Cities: Skylines, and I expect that it will be mostly used in the same
+				context by others. But if you want to convert these items for other games or create artwork using it, I
+				don't mind at all, as long as it's done fairly according to these terms.
 			</p>
 
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400">Branding &amp; Affiliation</h2>
+			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400">
+				Branding &amp; Affiliation
+			</h2>
 			<p class="mt-4">
-				If you display my logo or use my "branding", you should not do so in a way that misleads people into thinking that I was personally involved in or
-				approved of your projects.
+				If you display my logo or use my "branding", you should not do so in a way that misleads people into
+				thinking that I was personally involved in or approved of your projects.
 			</p>
 
 			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400">Credit</h2>
 			<p class="mt-4">
-				If you use any of my work in a public manner, I expect to be credited and maybe even a link to the source files page or the particular item that you
-				based your work on. If you don't credit me, I will be somewhat disappointed but I won't go hunting you down.
+				If you use any of my work in a public manner, I expect to be credited and maybe even a link to the
+				source files page or the particular item that you based your work on. If you don't credit me, I will be
+				somewhat disappointed but I won't go hunting you down.
 			</p>
 
 			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400">Profit</h2>
 			<p class="mt-4">
-				If you make small amounts of money (e.g. a 5$ donation a month) from your work which was based on my work, don't worry about it, I don't care. If you
-				make a big amount of money (e.g. 100$ for a commission), then I should receive a cut of the profits proportional to my contribution. If my work has
-				helped you in any way, you can <Link classes="" href="https://paypal.me/ronyx69" text="donate privately" theme="externallink" /> or <Link
+				If you make small amounts of money (e.g. a 5$ donation a month) from your work which was based on my
+				work, don't worry about it, I don't care. If you make a big amount of money (e.g. 100$ for a
+				commission), then I should receive a cut of the profits proportional to my contribution. If my work has
+				helped you in any way, you can <Link
 					classes=""
-					href="https://ko-fi.com/ronyx69"
-					text="publicly"
+					href="https://paypal.me/ronyx69"
+					text="donate privately"
 					theme="externallink"
-				/> , or buy
-				<Link classes="" href="https://ronyx69.gumroad.com/l/jpoffice?layout=profile" text="the JP office tutorial files" theme="externallink" />, any support
-				is appreciated.
+				/> or <Link classes="" href="https://ko-fi.com/ronyx69" text="publicly" theme="externallink" /> , or buy
+
+				<Link
+					classes=""
+					href="https://ronyx69.gumroad.com/l/jpoffice?layout=profile"
+					text="the JP office tutorial files"
+					theme="externallink"
+				/>, any support is appreciated.
 			</p>
 
 			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400">Inquiry</h2>
@@ -57,8 +71,9 @@ const title = 'Terms of use - Cities Skylines Modding';
 
 			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400">Intent</h2>
 			<p class="mt-4">
-				This was a hobby for me, but I don't mind making money from it. I have built on the work of others, and others can build on the work I've done or learn
-				by looking at the way I've done things, and the players/consumers can get more and better content. I hope that whoever uses these files does the same,
+				This was a hobby for me, but I don't mind making money from it. I have built on the work of others, and
+				others can build on the work I've done or learn by looking at the way I've done things, and the
+				players/consumers can get more and better content. I hope that whoever uses these files does the same,
 				for the same reasons.
 			</p>
 		</div>
