--- a/src/pages/lut.astro
+++ b/src/pages/lut.astro
@@ -9,25 +9,16 @@ import { images } from '../data/imageImports.js';
 
 <MainLayout title={title}>
 	<TableOfContents />
-	<section class="py-12 sm:ml-64 xl:mr-64 text-lg text-hit-gray-500">
-		<h1
-			id="overview"
-			class="border-b-4 border-hit-gray-600 pb-8 text-4xl font-bold text-hit-gray-400"
-		>
-			LUT
-		</h1>
+	<section class="pt-12 pb-48 sm:ml-64 xl:mr-64 text-lg text-hit-gray-500">
+		<h1 id="overview" class="border-b-4 border-hit-gray-600 pb-8 text-4xl font-bold text-hit-gray-400">LUT</h1>
 		<div class="content">
-			<h2
-				class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400"
-				id="about"
-			>
+			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="about">
 				About
 			</h2><div class="flex flex-col lg:flex-row gap-6 mt-4">
 				<div class="lg:w-2/3">
 					<p>
-						LUT stands for look-up table. It's a map of colors which
-						allows applying color correction and adjustments to the
-						image.
+						LUT stands for look-up table. It's a map of colors which allows applying color correction and
+						adjustments to the image.
 					</p>
 				</div><div class="lg:w-1/3">
 					<a href="/images/lut/comp.jpg" target="_blank">
@@ -41,10 +32,8 @@ import { images } from '../data/imageImports.js';
 							loading="eager"
 						/></a
 					><p class="explanation">
-						Comparison between the default LUT without any
-						adjustments and a finished modified LUT. Using <a
-							href="https://steamcommunity.com/sharedfiles/filedetails/?id=1209581656"
-							>Relight</a
+						Comparison between the default LUT without any adjustments and a finished modified LUT. Using <a
+							href="https://steamcommunity.com/sharedfiles/filedetails/?id=1209581656">Relight</a
 						> with default/recommended settings.
 					</p>
 				</div>
@@ -55,23 +44,16 @@ import { images } from '../data/imageImports.js';
 			>
 				Folder
 			</h4>
+			<p class="mt-4">The folder where you should put the LUT png is located here:</p>
 			<p class="mt-4">
-				The folder where you should put the LUT png is located here:
+				<span class="path">%LocalAppData%\Colossal Order\Cities_Skylines\Addons\ColorCorrections</span>
 			</p>
 			<p class="mt-4">
-				<span class="path"
-					>%LocalAppData%\Colossal
-					Order\Cities_Skylines\Addons\ColorCorrections</span>
-			</p>
-			<p class="mt-4">
-				The AppData folder is hidden by default, you can access it by
-				copying and pasting the path into the file explorer, or pressing
+				The AppData folder is hidden by default, you can access it by copying and pasting the path into the file
+				explorer, or pressing
 				<span class="key">Windows + R</span> and typing in appdata.
 			</p>
-			<h2
-				class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400"
-				id="creation"
-			>
+			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="creation">
 				Creation
 			</h2>
 			<h3
@@ -80,17 +62,9 @@ import { images } from '../data/imageImports.js';
 			>
 				Default LUT
 			</h3>
-			<p class="mt-4">
-				To create an LUT, you first need to download the default LUT
-				which has no adjustments.
-			</p>
+			<p class="mt-4">To create an LUT, you first need to download the default LUT which has no adjustments.</p>
 			<div class="content-download mt-4">
-				<Link
-					classes=""
-					href="https://i.imgur.com/cgjH2nC.png"
-					text="Download"
-					theme="downloadbutton"
-				/>
+				<Link classes="" href="https://i.imgur.com/cgjH2nC.png" text="Download" theme="downloadbutton" />
 			</div>
 			<h3
 				class="mt-16 text-2xl text-hit-gray-400 font-semibold border-b border-hit-gray-500 pb-4"
@@ -99,16 +73,13 @@ import { images } from '../data/imageImports.js';
 				Adjustments
 			</h3>
 			<p class="mt-4">
-				You should only apply per-pixel color adjustments, that means
-				you cannot apply effects such as blur, sharpening, clarity,
-				highlights/shadows, and many other effects which are more than
-				just a simple color adjustment.
+				You should only apply per-pixel color adjustments, that means you cannot apply effects such as blur,
+				sharpening, clarity, highlights/shadows, and many other effects which are more than just a simple color
+				adjustment.
 			</p>
 			<p class="mt-4">
-				You can apply color adjustments such as brightness, contrast,
-				levels, curves, exposure, vibrance, saturation, hue, color
-				balance, black &amp; white, color lookups, gradient maps, and
-				selective color.
+				You can apply color adjustments such as brightness, contrast, levels, curves, exposure, vibrance,
+				saturation, hue, color balance, black &amp; white, color lookups, gradient maps, and selective color.
 			</p>
 			<h3
 				class="mt-16 text-2xl text-hit-gray-400 font-semibold border-b border-hit-gray-500 pb-4"
@@ -117,20 +88,16 @@ import { images } from '../data/imageImports.js';
 				16 bits/channel
 			</h3>
 			<p class="mt-4">
-				When many adjustments are applied, working with a 16
-				bits/channel image can have the benefits of less noise and
-				banding issues. But make sure the final image is exported as 8
-				bits/channel, otherwise, the game won't recognize it.
+				When many adjustments are applied, working with a 16 bits/channel image can have the benefits of less
+				noise and banding issues. But make sure the final image is exported as 8 bits/channel, otherwise, the
+				game won't recognize it.
 			</p>
-			<h2
-				class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400"
-				id="example"
-			>
+			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="example">
 				Example
 			</h2>
 			<p class="mt-4">
-				Download a Photoshop file of an example LUT with various
-				adjustments. Must be exported as 8 bits/channel png.
+				Download a Photoshop file of an example LUT with various adjustments. Must be exported as 8 bits/channel
+				png.
 			</p>
 			<div class="content-download mt-4">
 				<Link
