--- a/src/pages/mod/custom-effect-loader.astro
+++ b/src/pages/mod/custom-effect-loader.astro
@@ -7,17 +7,22 @@ const title = 'Custom Effect Loader - Cities Skylines Modding';
 
 <MainLayout title={title}>
 	<TableOfContents />
-	<section class="py-12 sm:ml-64 xl:mr-64 text-lg text-hit-gray-500">
-		<h1 id="overview" class="border-b-4 border-hit-gray-600 pb-8 text-4xl font-bold text-hit-gray-400">Custom Effect Loader</h1>
+	<section class="pt-12 pb-48 sm:ml-64 xl:mr-64 text-lg text-hit-gray-500">
+		<h1 id="overview" class="border-b-4 border-hit-gray-600 pb-8 text-4xl font-bold text-hit-gray-400">
+			Custom Effect Loader
+		</h1>
 		<div class="content">
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="about">About</h2>
+			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="about">
+				About
+			</h2>
 			<p class="mt-4">
 				<Link
 					classes=""
 					href="https://steamcommunity.com/sharedfiles/filedetails/?id=1886877404"
 					text="The Custom Effect Loader mod by boformer"
 					theme="externallink"
-				/> can be used to add custom light effects to props and vehicles. The information in this article is based on <Link
+				/> can be used to add custom light effects to props and vehicles. The information in this article is
+				based on <Link
 					classes=""
 					href="https://gist.github.com/boformer/a9c5935a9752dcaa68d67e3a611ada26"
 					text="the official documentation of the mod"
@@ -25,8 +30,15 @@ const title = 'Custom Effect Loader - Cities Skylines Modding';
 				/>.
 			</p>
 			<p class="mt-4">This article assumes you are familiar with prop asset creation.</p>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="import-test">Effect</h2>
-			<h3 class="mt-16 text-2xl text-hit-gray-400 font-semibold border-b border-hit-gray-500 pb-4" id="xml">XML</h3>
+			<h2
+				class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400"
+				id="import-test"
+			>
+				Effect
+			</h2>
+			<h3 class="mt-16 text-2xl text-hit-gray-400 font-semibold border-b border-hit-gray-500 pb-4" id="xml">
+				XML
+			</h3>
 			<p class="mt-4">
 				After subscribing to the mod(or adding it locally) and enabling it, <Link
 					classes=""
@@ -44,65 +56,149 @@ const title = 'Custom Effect Loader - Cities Skylines Modding';
 					theme="externallink"
 				/>.
 			</p>
-			<h3 class="mt-16 text-2xl text-hit-gray-400 font-semibold border-b border-hit-gray-500 pb-4" id="effect-properties">Effect Properties</h3>
+			<h3
+				class="mt-16 text-2xl text-hit-gray-400 font-semibold border-b border-hit-gray-500 pb-4"
+				id="effect-properties"
+			>
+				Effect Properties
+			</h3>
 			<p class="mt-4">If you open the XML file using a text editor, you can adjust various properties.</p>
-			<h4 class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12" id="name">Name</h4>
+			<h4 class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12" id="name">
+				Name
+			</h4>
 			<p class="mt-4">
-				Name of the light effect which will show up in the asset editor. This must be globally unique so it's a good idea to prefix it with your username. This
-				should not be changed for already used and published effects.
+				Name of the light effect which will show up in the asset editor. This must be globally unique so it's a
+				good idea to prefix it with your username. This should not be changed for already used and published
+				effects.
 			</p>
-			<h4 class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12" id="type">Type</h4>
+			<h4 class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12" id="type">
+				Type
+			</h4>
 			<p class="mt-4">
-				The type of light: <span class="path">Spot</span>, <span class="path">Directional</span>, <span class="path">Point</span>, <span class="path">Area</span
-				>.
+				The type of light: <span class="path">Spot</span>, <span class="path">Directional</span>, <span
+					class="path">Point</span
+				>, <span class="path">Area</span>.
 			</p>
-			<h4 class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12" id="intensity">Intensity</h4>
-			<p class="mt-4">The brightness of the light, usually starts from 4 for street lights and up to 8 for floodlights.</p>
-			<h4 class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12" id="range">Range</h4>
+			<h4
+				class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12"
+				id="intensity"
+			>
+				Intensity
+			</h4>
+			<p class="mt-4">
+				The brightness of the light, usually starts from 4 for street lights and up to 8 for floodlights.
+			</p>
+			<h4
+				class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12"
+				id="range"
+			>
+				Range
+			</h4>
 			<p class="mt-4">How far the light effect extends in meters.</p>
-			<h4 class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12" id="spotangle">Spot Angle</h4>
-			<p class="mt-4">The angle of how wide or narrow the light beam is for <span class="path">Spot</span> lights.</p>
-			<h4 class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12" id="spotleaking">Spot Leaking</h4>
-			<p class="mt-4">The fog/bloom effect around the light source, usually 0.1 to 0.5.</p>
-			<h4 class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12" id="batchedlight">Batched Light</h4>
-			<p class="mt-4">If this is set to true, the light is visible from any distance, must be false for vehicle lights.</p>
-			<h4 class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12" id="fadestartdistance">Fade Start Distance</h4>
-			<p class="mt-4">If batched light is set to false, this controls the distance at which the light effect starts to fade out, usually around 300.</p>
-			<h4 class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12" id="fadeenddistance">Fade End Distance</h4>
+			<h4
+				class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12"
+				id="spotangle"
+			>
+				Spot Angle
+			</h4>
 			<p class="mt-4">
-				If batched light is set to false, this controls the distance at which the light effect is no longer visible, usually around 500. Higher values may have
-				no effect because of the limited prop render distance unless <Link
+				The angle of how wide or narrow the light beam is for <span class="path">Spot</span> lights.
+			</p>
+			<h4
+				class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12"
+				id="spotleaking"
+			>
+				Spot Leaking
+			</h4>
+			<p class="mt-4">The fog/bloom effect around the light source, usually 0.1 to 0.5.</p>
+			<h4
+				class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12"
+				id="batchedlight"
+			>
+				Batched Light
+			</h4>
+			<p class="mt-4">
+				If this is set to true, the light is visible from any distance, must be false for vehicle lights.
+			</p>
+			<h4
+				class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12"
+				id="fadestartdistance"
+			>
+				Fade Start Distance
+			</h4>
+			<p class="mt-4">
+				If batched light is set to false, this controls the distance at which the light effect starts to fade
+				out, usually around 300.
+			</p>
+			<h4
+				class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12"
+				id="fadeenddistance"
+			>
+				Fade End Distance
+			</h4>
+			<p class="mt-4">
+				If batched light is set to false, this controls the distance at which the light effect is no longer
+				visible, usually around 500. Higher values may have no effect because of the limited prop render
+				distance unless <Link
 					classes=""
 					href="https://steamcommunity.com/sharedfiles/filedetails/?id=1680642819"
 					text="a mod like ULOD"
 					theme="externallink"
 				/> increases this distance.
 			</p>
-			<h4 class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12" id="offmin-offmax">Off Min &amp; Off Max</h4>
+			<h4
+				class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12"
+				id="offmin-offmax"
+			>
+				Off Min &amp; Off Max
+			</h4>
 			<p class="mt-4">
-				Daylight values under which the lights turn off. For night-only lights usually 0.4, 0.7. If both values are the same, all instances of this light will
-				turn off at the same time(more specifically daylight brightness), but if they are different, they will turn off at random times. <Link
+				Daylight values under which the lights turn off. For night-only lights usually 0.4, 0.7. If both values
+				are the same, all instances of this light will turn off at the same time(more specifically daylight
+				brightness), but if they are different, they will turn off at random times. <Link
 					classes=""
 					href="https://docs.google.com/spreadsheets/d/1adrpJysA9yxkrRGrQ-I3VVs8QqqQvs4qu9Cq4wSCLqY/edit?usp=sharing"
 					text="Check this spreadsheet"
 					theme="externallink"
 				/> to see how many hours during the day the light will be off using which values.
 			</p>
-			<h4 class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12" id="blinktype">Blink Type</h4>
+			<h4
+				class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12"
+				id="blinktype"
+			>
+				Blink Type
+			</h4>
 			<p class="mt-4">
-				If and how the light should blink: <span class="path">None</span>, <span class="path">Blink_050_050</span>, <span class="path">MildFade_0125_0125</span
-				>, <span class="path">MediumFade_500_500</span>, <span class="path">StrongBlaze_0125_0125</span>, <span class="path">StrongFade_250_250</span>, <span
-					class="path">Blink_025_025</span
-				>
+				If and how the light should blink: <span class="path">None</span>, <span class="path"
+					>Blink_050_050</span
+				>, <span class="path">MildFade_0125_0125</span>, <span class="path">MediumFade_500_500</span>, <span
+					class="path">StrongBlaze_0125_0125</span
+				>, <span class="path">StrongFade_250_250</span>, <span class="path">Blink_025_025</span>
 			</p>
-			<h4 class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12" id="rotationspeed">Rotation Speed</h4>
-			<p class="mt-4">The speed at which the light will rotate around an axis, usually 10 to 50. Rotation works only if batched light is set to false.</p>
-			<h4 class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12" id="rotationaxis">Rotation Axis X Y Z</h4>
-			<p class="mt-4">Rotation axis vector around which the light will rotate.</p>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="publish">Publish</h2>
+			<h4
+				class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12"
+				id="rotationspeed"
+			>
+				Rotation Speed
+			</h4>
 			<p class="mt-4">
-				You can publish the asset as usual, but you must include your modified XML file in the content folder. Make sure the mod is enabled while you publish
-				the asset, this will add a custom tag which can be used to find all custom effect loader assets in the steam workshop.
+				The speed at which the light will rotate around an axis, usually 10 to 50. Rotation works only if
+				batched light is set to false.
+			</p>
+			<h4
+				class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12"
+				id="rotationaxis"
+			>
+				Rotation Axis X Y Z
+			</h4>
+			<p class="mt-4">Rotation axis vector around which the light will rotate.</p>
+			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="publish">
+				Publish
+			</h2>
+			<p class="mt-4">
+				You can publish the asset as usual, but you must include your modified XML file in the content folder.
+				Make sure the mod is enabled while you publish the asset, this will add a custom tag which can be used
+				to find all custom effect loader assets in the steam workshop.
 			</p>
 		</div>
 	</section>
