--- a/src/pages/shader/animuv.astro
+++ b/src/pages/shader/animuv.astro
@@ -9,7 +9,7 @@ import { images } from '../../data/imageImports.js';
 
 <MainLayout title={title}>
 	<TableOfContents />
-	<section class="py-12 text-lg sm:ml-64 xl:mr-64 text-hit-gray-500">
+	<section class="pt-12 pb-48 text-lg sm:ml-64 xl:mr-64 text-hit-gray-500">
 		<h1 id="overview" class="pb-8 text-4xl font-bold border-b-4 border-hit-gray-600 text-hit-gray-400">
 			AnimUV Shader
 		</h1>
@@ -163,5 +163,24 @@ import { images } from '../../data/imageImports.js';
 				/>.
 			</p>
 		</div>
+		<!-- ?Video Section -->
+		<h2
+			id="relevant-videos"
+			class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400"
+		>
+			Relevant Videos
+		</h2>
+		<ul class="text-lg mt-4 text-hit-gray-500 list-inside">
+			<li>
+				<h3 class="mt-4" id="animuv-params-props">
+					<Link
+						href="https://www.youtube.com/watch?v=ohxjbx7VMM8"
+						theme="youtube"
+						text="AnimUV Params & Props"
+						classes=""
+					/>
+				</h3>
+			</li>
+		</ul>
 	</section>
 </MainLayout>
