--- a/src/pages/tutorials.astro
+++ b/src/pages/tutorials.astro
@@ -8,34 +8,101 @@ const description = 'Tutorials for Cities Skylines Modding.';
 
 <MainLayout title={title} description={description}>
 	<TableOfContents />
-	<section class="py-12 sm:ml-64 xl:mr-64 text-lg text-hit-gray-500">
-		<h1 id="overview" class="border-b-4 border-hit-gray-600 pb-8 text-4xl font-bold text-hit-gray-400">Tutorials</h1>
+	<section class="pt-12 pb-48 sm:ml-64 xl:mr-64 text-lg text-hit-gray-500">
+		<h1 id="overview" class="border-b-4 border-hit-gray-600 pb-8 text-4xl font-bold text-hit-gray-400">
+			Tutorials
+		</h1>
 		<div class="content">
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="generic">Generic</h2>
+			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="generic">
+				Generic
+			</h2>
 			<ul class="mt-4 list-disc list-inside">
-				<li class="mt-4"><Link classes="" href="https://youtube.com/watch?v=oRidpGxLmQ8" text="No Workshop Mode & Local Mods" theme="externallink" /></li>
 				<li class="mt-4">
-					<Link classes="" href="https://youtube.com/watch?v=7Et2zOvXahU" text="Realtime Ingame Texture & Mesh Replacement" theme="externallink" />
+					<Link
+						classes=""
+						href="https://youtube.com/watch?v=oRidpGxLmQ8"
+						text="No Workshop Mode & Local Mods"
+						theme="externallink"
+					/>
 				</li>
-				<li class="mt-4"><Link classes="" href="https://youtube.com/watch?v=K3wnhJjyvkw" text="Decide Color Variations Ingame" theme="externallink" /></li>
+				<li class="mt-4">
+					<Link
+						classes=""
+						href="https://youtube.com/watch?v=7Et2zOvXahU"
+						text="Realtime Ingame Texture & Mesh Replacement"
+						theme="externallink"
+					/>
+				</li>
+				<li class="mt-4">
+					<Link
+						classes=""
+						href="https://youtube.com/watch?v=K3wnhJjyvkw"
+						text="Decide Color Variations Ingame"
+						theme="externallink"
+					/>
+				</li>
 			</ul>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="buildings">Buildings</h2>
-			<ul class="mt-4 list-disc list-inside">
-				<li class="mt-4"><Link classes="" href="https://youtube.com/watch?v=48C__Aj4itk" text="Illumination Map" theme="externallink" /></li>
-				<li class="mt-4"><Link classes="" href="https://youtube.com/watch?v=K0bsYvreks4" text="Sub Meshes" theme="externallink" /></li>
-			</ul>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="props">Props</h2>
-			<ul class="mt-4 list-disc list-inside">
-				<li class="mt-4"><Link classes="" href="https://youtube.com/watch?v=3ZGYVKFL30M" text="Prop Variations" theme="externallink" /></li>
-			</ul>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="vehicles">Vehicles</h2>
-			<ul class="mt-4 list-disc list-inside">
-				<li class="mt-4"><Link classes="" href="https://youtube.com/watch?v=K0bsYvreks4" text="Sub Meshes" theme="externallink" /></li>
-			</ul>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="publishing">Publishing</h2>
+			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="buildings">
+				Buildings
+			</h2>
 			<ul class="mt-4 list-disc list-inside">
 				<li class="mt-4">
-					<Link classes="" href="https://youtube.com/watch?v=Hwi-y50JSRc" text="Publish Multiple Assets as a Single Workshop Item" theme="externallink" />
+					<Link
+						classes=""
+						href="https://youtube.com/watch?v=48C__Aj4itk"
+						text="Illumination Map"
+						theme="externallink"
+					/>
+				</li>
+				<li class="mt-4">
+					<Link
+						classes=""
+						href="https://youtube.com/watch?v=K0bsYvreks4"
+						text="Sub Meshes"
+						theme="externallink"
+					/>
+				</li>
+			</ul>
+			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="props">
+				Props
+			</h2>
+			<ul class="mt-4 list-disc list-inside">
+				<li class="mt-4">
+					<Link
+						classes=""
+						href="https://youtube.com/watch?v=3ZGYVKFL30M"
+						text="Prop Variations"
+						theme="externallink"
+					/>
+				</li>
+			</ul>
+			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="vehicles">
+				Vehicles
+			</h2>
+			<ul class="mt-4 list-disc list-inside">
+				<li class="mt-4">
+					<Link
+						classes=""
+						href="https://youtube.com/watch?v=K0bsYvreks4"
+						text="Sub Meshes"
+						theme="externallink"
+					/>
+				</li>
+			</ul>
+			<h2
+				class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400"
+				id="publishing"
+			>
+				Publishing
+			</h2>
+			<ul class="mt-4 list-disc list-inside">
+				<li class="mt-4">
+					<Link
+						classes=""
+						href="https://youtube.com/watch?v=Hwi-y50JSRc"
+						text="Publish Multiple Assets as a Single Workshop Item"
+						theme="externallink"
+					/>
 				</li>
 				<li class="mt-4">
 					<Link
@@ -46,34 +113,123 @@ const description = 'Tutorials for Cities Skylines Modding.';
 					/>
 				</li>
 			</ul>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="lod">LOD</h2>
-			<ul class="mt-4 list-disc list-inside">
-				<li class="mt-4"><Link classes="" href="https://youtube.com/watch?v=UiGqTCB2w8w" text="LOD Texture Baking in Blender" theme="externallink" /></li>
-				<li class="mt-4"><Link classes="" href="https://youtube.com/watch?v=S1EBdi2fGB0" text="LOD Texture Baking in 3ds Max" theme="externallink" /></li>
-			</ul>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="modtools">ModTools</h2>
-			<ul class="mt-4 list-disc list-inside">
-				<li class="mt-4"><Link classes="" href="https://youtube.com/watch?v=jbFvYGO-AFE" text="Change Shader & Placement Mode" theme="externallink" /></li>
-				<li class="mt-4"><Link classes="" href="https://youtube.com/watch?v=nzJK77BU2Lg" text="Dump/Extract Meshes and Textures" theme="externallink" /></li>
-			</ul>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="shaders">Shaders</h2>
-			<ul class="mt-4 list-disc list-inside">
-				<li class="mt-4"><Link classes="" href="https://youtube.com/watch?v=ELoMC1rWOSc" text="Rotors Shader" theme="externallink" /></li>
-			</ul>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="mod-specific">Mod-specific</h2>
-			<ul class="mt-4 list-disc list-inside">
-				<li class="mt-4"><Link classes="" href="https://youtube.com/watch?v=OxUymsbljyg" text="Decal Prop Fix Decals" theme="externallink" /></li>
-				<li class="mt-4"><Link classes="" href="https://youtube.com/watch?v=ohxjbx7VMM8" text="AnimUV Props" theme="externallink" /></li>
-				<li class="mt-4"><Link classes="" href="https://youtube.com/watch?v=HTNiAlk9Phk" text="Ploppable Asphalt + Props" theme="externallink" /></li>
-				<li class="mt-4"><Link classes="" href="https://youtube.com/watch?v=1pVxf0OeELk" text="Additive Shader" theme="externallink" /></li>
-			</ul>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="mod-development">Mod Development</h2>
+			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="lod">
+				LOD
+			</h2>
 			<ul class="mt-4 list-disc list-inside">
 				<li class="mt-4">
-					<Link classes="" href="https://community.simtropolis.com/forums/topic/73388--/" text="Tutorials by boformer" theme="externallink" />
+					<Link
+						classes=""
+						href="https://youtube.com/watch?v=UiGqTCB2w8w"
+						text="LOD Texture Baking in Blender"
+						theme="externallink"
+					/>
 				</li>
 				<li class="mt-4">
-					<Link classes="" href="https://youtube.com/watch?v=BUft3Y1HoX8" text="The Basics of Cities: Skylines Modding (Part1)" theme="externallink" />
+					<Link
+						classes=""
+						href="https://youtube.com/watch?v=S1EBdi2fGB0"
+						text="LOD Texture Baking in 3ds Max"
+						theme="externallink"
+					/>
+				</li>
+			</ul>
+			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="modtools">
+				ModTools
+			</h2>
+			<ul class="mt-4 list-disc list-inside">
+				<li class="mt-4">
+					<Link
+						classes=""
+						href="https://youtube.com/watch?v=jbFvYGO-AFE"
+						text="Change Shader & Placement Mode"
+						theme="externallink"
+					/>
+				</li>
+				<li class="mt-4">
+					<Link
+						classes=""
+						href="https://youtube.com/watch?v=nzJK77BU2Lg"
+						text="Dump/Extract Meshes and Textures"
+						theme="externallink"
+					/>
+				</li>
+			</ul>
+			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="shaders">
+				Shaders
+			</h2>
+			<ul class="mt-4 list-disc list-inside">
+				<li class="mt-4">
+					<Link
+						classes=""
+						href="https://youtube.com/watch?v=ELoMC1rWOSc"
+						text="Rotors Shader"
+						theme="externallink"
+					/>
+				</li>
+			</ul>
+			<h2
+				class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400"
+				id="mod-specific"
+			>
+				Mod-specific
+			</h2>
+			<ul class="mt-4 list-disc list-inside">
+				<li class="mt-4">
+					<Link
+						classes=""
+						href="https://youtube.com/watch?v=OxUymsbljyg"
+						text="Decal Prop Fix Decals"
+						theme="externallink"
+					/>
+				</li>
+				<li class="mt-4">
+					<Link
+						classes=""
+						href="https://youtube.com/watch?v=ohxjbx7VMM8"
+						text="AnimUV Props"
+						theme="externallink"
+					/>
+				</li>
+				<li class="mt-4">
+					<Link
+						classes=""
+						href="https://youtube.com/watch?v=HTNiAlk9Phk"
+						text="Ploppable Asphalt + Props"
+						theme="externallink"
+					/>
+				</li>
+				<li class="mt-4">
+					<Link
+						classes=""
+						href="https://youtube.com/watch?v=1pVxf0OeELk"
+						text="Additive Shader"
+						theme="externallink"
+					/>
+				</li>
+			</ul>
+			<h2
+				class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400"
+				id="mod-development"
+			>
+				Mod Development
+			</h2>
+			<ul class="mt-4 list-disc list-inside">
+				<li class="mt-4">
+					<Link
+						classes=""
+						href="https://community.simtropolis.com/forums/topic/73388--/"
+						text="Tutorials by boformer"
+						theme="externallink"
+					/>
+				</li>
+				<li class="mt-4">
+					<Link
+						classes=""
+						href="https://youtube.com/watch?v=BUft3Y1HoX8"
+						text="The Basics of Cities: Skylines Modding (Part1)"
+						theme="externallink"
+					/>
 				</li>
 			</ul>
 		</div>
